# AtlasCore

./: .dockerignore  .env.example  .gitignore  404.html  LICENSE  README.md  docker-compose.yml  index.html  makefile  pyproject.toml
.github/workflows/: ci.yml
apps/auth_api/: README.md  alembic.ini  dockerfile
apps/core_api/: README.md  alembic.ini  dockerfile
apps/eventing_api/: README.md  dockerfile
apps/notification_api/: README.md  dockerfile
apps/observability_api/: README.md  dockerfile
apps/worker/: README.md
arquitetura/catalogo-servicos/: index.html
arquitetura/contrato-auth-core/: index.html
arquitetura/ddd-clean-architecture/: index.html
arquitetura/fronteiras/: index.html
arquitetura/seguranca-rbac/: index.html
arquitetura/tratamento-erros/: index.html
arquitetura/visao-geral/: index.html
contracts/: README.md
contracts/_templates/: http-contract.md  integration-readme.md
contracts/auth-core/: README.md
contracts/auth-notification/: README.md
contracts/core-notification/: README.md
docs-site/: mkdocs.en.yml  mkdocs.pt-br.yml  mkdocs.yml
docs-site/docs/: index.md
dominios/livraria/: index.html
dominios/public-assets/: index.html
estado-atual/: index.html
guia-apresentacao/: index.html
infraestrutura/: index.html
qualidade/estrategia-testes/: index.html
repositorio/anatomia-api/: index.html
repositorio/anatomia-modulo/: index.html
repositorio/mapa-do-projeto/: index.html
search/: search_index.json
servicos/auth-api/: index.html
testes-workflow/: index.html
tests/: conftest.py
toolbox/: README.md
(+274 files in other folders)
