[project]
name = "atlas-core"
version = "0.1.0"
description = "Production-ready backend foundation for FastAPI applications focused on security, domain isolation, maintainability and scalability."
authors = [
    {name = "Matheus Paiva",email = "matheuspaivabrito@outlook.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "pyjwt (>=2.13.0,<3.0.0)",
    "pwdlib (>=0.3.0,<0.4.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "sendgrid (>=6.12.5,<7.0.0)",
    "sentry-sdk (>=2.61.0,<3.0.0)",
    "aiokafka (>=0.14.0,<0.15.0)",
    "orjson (>=3.11.9,<4.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)"
]
docs = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.6,<10.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

